--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -97,6 +97,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "$$\\left<F\\right>=\\frac{1}{Z}Tr(e^{-\\beta H}F)=\\frac{\\sum_{n} e^{-\\beta E_n} F_n}{\\sum_{n} e^{-\\beta E_n}}=\\frac{F_0+\\sum_{n=1}e^{-\\beta (E_n-E_0)}F_n}{1+\\sum_{n=1}e^{-\\beta (E_n-E_0)}}\\to F_0 \\qquad \\beta \\to \\infty $$\n",
+    "$$H|n>=E_n|n> \\qquad F_n=<n|F|n>$$\n",
+    "$$\\rho_{\\beta}=\\frac{e^{-\\beta H}}{Tr\\left(e^{-\\beta H}\\right)}$$\n",
+    "$$Tr(F\\rho_\\beta)=\\int dx dy <x|F|y><y|\\rho_\\beta|x>$$\n",
+    "$$F=F(x) \\qquad <x|F|y>=F(x)\\delta(x-y) \\qquad <y|\\rho_\\beta|x>=\\frac{1}{Z}K(y,x,\\beta)$$\n",
+    "$$\\left<F(x)\\right>=\\int \\frac{dx}{Z} F(x)K(x,x,\\beta)$$\n",
+    "$$F=F(p) \\qquad <x|F(p)|y>=\\int dp <x|F(p)|p><p||y>=\\int dp F(p) <x||p> <p||y>=\\int \\frac{dp}{2\\pi} F(p)e^{ip(x-y)}=\\int \\frac{dp}{2\\pi} F(-i\\partial_x) e^{ip(x-y)}=F(-i\\partial_x)\\delta(x-y)$$\n",
+    "$$<F(p)>=\\int dx dy F(-i\\partial_x)\\delta(x-y)K(y,x,\\beta)=\\int \\frac{dx}{Z} \\left[F(-i\\partial_y)K(y,x,\\beta)\\right]|_{y=x}$$\n",
+    "\n",
+    "$$\\rho_{\\beta_1}\\rho_{\\beta_2}=\\rho_{\\beta_1+\\beta_2}\\frac{Z(\\beta_1)Z(\\beta_2)}{Z(\\beta_1+\\beta_2)} \\qquad K(x,y,\\beta_1+\\beta_2)=\\int dz K(x,z,\\beta_1)K(z,y,\\beta_2)$$\n",
+    "\n",
+    "$$\\beta=Na \\qquad \\left<F(x)\\right>=\\int\\frac{dx_1...dx_N}{Z(\\beta)}K(x_1,x_N,a)...K(x_2,x_1,a) F(x_1)=\\frac{1}{N}\\sum_k\\int\\frac{dx_1...dx_N}{Z(\\beta)}K(x_1,x_N,a)...K(x_2,x_1,a) F(x_k)$$\n",
+    "\n",
+    "$$\\left<F(p)\\right>=\\int \\frac{dx_1}{Z} \\left[F(-i\\partial_y)K(y,x_1,\\beta)\\right]|_{y=x_1}=\\int \\frac{dx_1...dx_N}{Z} \\left[F(-i\\partial_y)K(y,x_2,a)\\right]|_{y=x_1}K(x_2,x_3,a)...K(x_N,x_1,a)=\\int \\frac{dx_1...dx_N}{Z}\\frac{\\left[F(-i\\partial_y)K(y,x_2,a)\\right]|_{y=x_1}}{K(x_1,x_2,a)}K(x_1,x_2,a)K(x_2,x_3,a)...K(x_N,x_1,a)=\\\\= \\frac{1}{N}\\sum_i\\int \\frac{dx_1...dx_N}{Z}\\frac{\\left[F(-i\\partial_y)K(y,x_{i+1},a)\\right]|_{y=x_i}}{K(x_i,x_{i+1},a)}K(x_1,x_2,a)K(x_2,x_3,a)...K(x_N,x_1,a)=\\left<\\frac{\\left[F(-i\\partial_y)K(y,x_{i+1},a)\\right]|_{y=x_i}}{K(x_i,x_{i+1},a)}\\right>$$\n",
+    "\n",
+    "$$K(x_2,x_1,a)=<x_2|e^{-aH}|x_1>=<x_2|e^{-a(T(p)+V(x))}|x_1>=<x_2|e^{-aT(p)}e^{-aV(x)}|x_1>+O(a^2)=\\int dz <x_2|e^{-aT(p)}|z><z|e^{-aV(x)}|x_1>=\\\\ \\int dz <x_2|e^{-aT(p)}|z> e^{-aV(x_1)} \\delta(z-x_1)=<x_2|e^{-aT(p)}|x_1>e^{-aV(x_1)}$$\n",
+    "$$<x_2|e^{-aT(p)}|x_1>=\\int \\frac{dp}{2\\pi}e^{-aT(p)+ip(x_1-x_2)}$$\n",
+    "$$T(p)=\\frac{p^2}{2m} \\qquad <x_2|e^{-aT(p)}|x_1>=e^{-m\\frac{(x_2-x_1)^2}{2a}}$$\n",
+    "$$K(x_2,x_1,a)=e^{-m\\frac{(x_2-x_1)^2}{2a}-aV(x_1)}+O(a^2)$$\n",
+    "$$\\left<F(x)\\right>=\\int\\frac{dx_1...dx_N}{Z}e^{-\\sum_i m\\frac{(x_{i+1}-x_i)^2}{2a}+aV(x_i)}F(x_1)=\\frac{1}{N}\\sum_k \\int\\frac{dx_1...dx_N}{Z}e^{-\\sum_i m\\frac{(x_{i+1}-x_i)^2}{2a}+aV(x_i)}F(x_k)$$\n",
+    "$$\\left<\\frac{p^2}{2m}\\right>=\\frac{1}{2ma}\\left<1-\\frac{(x_{i+1}-x_i)^2}{a}\\right>=\\frac{1}{2ma}\\left<1-\\frac{x^2_i-2x_ix_{i+1}+x^2_{i+1}}{a}\\right>$$\n",
+    "$$G_s=<x_ix_{i+s}>$$\n",
+    "$$\\left<\\frac{p^2}{2m}\\right>=\\frac{1}{2ma}\\left(1-2\\frac{G_0-G_1}{a}\\right)$$\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
