--- a/PIMC-py/Notes.ipynb
+++ b/PIMC-py/Notes.ipynb
@@ -102,6 +102,7 @@
     "collapsed": true
    },
    "source": [
+    "$$\\Large{Path \\,\\, integral \\,\\, approximation}$$\n",
     "$$\\left<F\\right>=\\frac{1}{Z}Tr(e^{-\\beta H}F)=\\frac{\\sum_{n} e^{-\\beta E_n} F_n}{\\sum_{n} e^{-\\beta E_n}}=\\frac{F_0+\\sum_{n=1}e^{-\\beta (E_n-E_0)}F_n}{1+\\sum_{n=1}e^{-\\beta (E_n-E_0)}}\\to F_0 \\qquad \\beta \\to \\infty $$\n",
     "$$H|n>=E_n|n> \\qquad F_n=<n|F|n>$$\n",
     "$$\\rho_{\\beta}=\\frac{e^{-\\beta H}}{Tr\\left(e^{-\\beta H}\\right)}$$\n",
@@ -125,6 +126,79 @@
     "$$\\left<\\frac{p^2}{2m}\\right>=\\frac{1}{2ma}\\left<1-\\frac{(x_{i+1}-x_i)^2}{a}\\right>=\\frac{1}{2ma}\\left<1-\\frac{x^2_i-2x_ix_{i+1}+x^2_{i+1}}{a}\\right>$$\n",
     "$$G_s=<x_ix_{i+s}>$$\n",
     "$$\\left<\\frac{p^2}{2m}\\right>=\\frac{1}{2ma}\\left(1-2\\frac{G_0-G_1}{a}\\right)$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\Large{Monte-carlo}$$\n",
+    "$$...$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\Large{Green \\, \\, function}$$\n",
+    "$$\\hat H=-\\frac12 \\partial_x^2+V(x)$$\n",
+    "$$\\partial_t \\psi=-H\\psi \\qquad \\psi(x,0)=\\varphi(x)$$\n",
+    "$$\\psi(x,t)=\\hat U(t) \\varphi(x)$$\n",
+    "$$(\\partial_t \\hat U(t))\\varphi=-\\hat H \\hat U \\varphi \\qquad \\partial_t \\hat U=-\\hat H \\hat U$$\n",
+    "$$\\psi(x,t)=\\hat U(t)\\varphi(x)=\\hat U(t)\\int_{\\mathbb{R}}dy \\delta(x-y)\\varphi(y)=\\int_{\\mathbb{R}}dy K(x,y,t)\\varphi(y) \\qquad K(x,y,t)=\\hat U(t) \\delta(x-y)$$\n",
+    "inhomogeneous equation:\n",
+    "$$\\partial_t \\psi=-H\\psi + f(x,t)$$\n",
+    "\"variation of constant\"\n",
+    "$$\\psi(x,t)=\\hat U(t) \\Phi(x,t)$$\n",
+    "$$-HU\\Phi+U\\partial_t\\Phi=-HU\\Phi+f$$\n",
+    "$$\\Phi(x,t)=\\varphi(x)+\\int_0^t \\hat U(-s) f(x,s) ds$$\n",
+    "$$\\psi(x,t)=\\hat U(t)\\varphi(x)+\\int_0^t ds \\hat U(t-s) f(x,s)=\\int_{\\mathbb{R}}dy K(x,y,t) \\varphi(y)+\\int_0^t ds \\int_{\\mathbb{R}} dy K(x,y,t-s) f(x,s)$$\n",
+    "$$\\varphi(x)=0 \\qquad f(x,t)=\\delta(x-x_0)\\delta(t) \\qquad \\psi(x,t)=K(x,x_0,t)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "$$\\Large{Ito \\, \\, process}$$\n",
+    "$$dx=a(x,t)dt+b(x,t)\\delta W$$\n",
+    "$$\\partial_t u+\\partial_x(au)-\\frac{1}{2}\\partial^2_x(b^2u)=0$$\n",
+    "\n",
+    "$$\\partial_t \\psi=\\frac{1}{2}\\partial_x^2 - V\\psi$$\n",
+    "$$u(x,t)=\\varphi(x)v(x,t)$$\n",
+    "$$\\partial_t v+\\frac{\\partial_x(a\\varphi v)}{\\varphi}-\\frac{1}{2}\\frac{\\partial^2_x(b^2 \\varphi v)}{\\varphi}=0$$\n",
+    "$$\\partial_t v-\\frac12 b^2 \\partial_x^2 v+\\left(a-\\frac{\\partial_x(b\\varphi)}{\\varphi}\\right)\\partial_x v+\\left[\\frac{\\partial_x(a\\varphi)}{\\varphi}-\\frac{\\partial_x^2(b^2\\varphi)}{2\\varphi}\\right]v=0$$\n",
+    "$$-\\frac12b^2=-\\frac12$$\n",
+    "$$a-\\frac{\\partial_x(b\\varphi)}{\\varphi}=0$$\n",
+    "$$\\frac{\\partial_x(a\\varphi)}{\\varphi}-\\frac{\\partial^2_x(b^2\\varphi)}{2\\varphi}=V-\\varepsilon_0$$\n",
+    "$$b=1 \\qquad a=a(x)=\\frac{\\varphi'}{\\varphi} \\qquad a'+a^2=2(V-\\varepsilon_0)$$\n",
+    "$$a=-f(x) \\qquad f'=f^2-2(V-\\varepsilon_0)$$\n",
+    "$$v=e^{\\varepsilon_0 t}\\psi(x,t) \\qquad \\partial_t\\psi=\\frac12\\partial_x^2 \\psi -V \\psi$$\n",
+    "$$f'=f^2-2(V-\\varepsilon_0)$$\n",
+    "$$dx=-f(x)dt+\\delta W \\Longrightarrow P(x,t)$$\n",
+    "$$\\psi(x,t)=Ne^{\\int_{x_0}^x f(s) ds}e^{-\\varepsilon_0t}P(x,t)$$\n",
+    "oscillator:\n",
+    "$$V(x)=\\frac{x^2}{2} \\qquad f(x)=x \\qquad \\varepsilon_0=\\frac12 $$\n",
+    "$$dx=-xdt+\\delta W$$\n",
+    "-Ornstein Ulenbeck process\n",
+    "\n",
+    "method \"variation of constant\"\n",
+    "$$x=y(t)e^{-t} \\qquad y=xe^t$$\n",
+    "Ito's lemma:\n",
+    "$$dy=\\left(\\frac{\\partial y}{\\partial t}+a\\frac{\\partial y}{\\partial x}+\\frac{b^2}{2}\\frac{\\partial^2 y}{\\partial x^2}\\right)dt+b\\frac{\\partial y}{\\partial x}\\delta W$$\n",
+    "in our special case:\n",
+    "$$dy=e^t \\delta W$$\n",
+    "$$y(t)=x(0)+\\varepsilon\\sqrt{\\int_0^te^{2s}ds} \\qquad \\varepsilon\\sim\\mathbb{N}(0,1)$$\n",
+    "$$x(t)=e^{-t}x(0)+\\varepsilon\\sqrt{\\frac12\\left(1-e^{-2t}\\right)} \\qquad x(t) \\sim \\mathbb{N}\\left(x_0 e^{-t},\\sqrt{\\frac12 \\left(1-e^{-2t}\\right)} \\right) \\qquad x_0\\equiv x(0)$$\n",
+    "$$P(x,t)=\\frac{1}{\\sqrt{2\\pi}\\sqrt{\\frac{1-e^{-2t}}{2}}}\\exp\\left(\\frac{(x-x_0e^{-t})^2}{1-e^{-2t}}\\right)$$\n",
+    "$$\\psi(x,t)=Ne^{-\\frac{x^2}{2}}e^{-t/2}\\frac{1}{\\sqrt{\\pi(1-e^{-2t})}}\\exp\\left(\\frac{(x-x_0e^{-t})^2}{1-e^{-2t}}\\right)=$$\n",
+    "$$=\\frac{Ne^{-x_0^2/2}}{\\sqrt{2\\pi sht}}\\exp\\left(\\frac{x^2 cht + x_0^2 cht-2xx_0}{2sht}\\right)$$\n",
+    "$$\\psi(x,t \\to 0) \\to Ne^{-x_0^2/2}\\delta(x-x_0)$$\n",
+    "$$N=e^{x_0^2/2}$$\n",
+    "$$\\psi(x,t)=\\frac{1}{\\sqrt{2\\pi sht}}\\exp\\left(\\frac{x^2 cht + x_0^2 cht-2xx_0}{2sht}\\right) \\qquad \\psi(x,0)=\\delta(x-x_0)$$\n",
+    "$$K(x,x_0,t)=\\frac{1}{\\sqrt{2\\pi sht}}\\exp\\left(\\frac{x^2 cht + x_0^2 cht-2xx_0}{2sht}\\right)$$"
    ]
   },
   {
