--- a/RPIMC/Figures/graphics.ipynb
+++ b/RPIMC/Figures/graphics.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "e3a7cefc",
+   "execution_count": 26,
+   "id": "1063b26e",
    "metadata": {},
    "outputs": [
     {
@@ -40,14 +40,14 @@
     "plt.xlabel('Number of sweeps')\n",
     "\n",
     "plt.legend()\n",
-    "plt.savefig('thermalization.pdf', bbox_inches = 'tight')\n",
+    "plt.savefig('thermalization_m100_w1_Nt10_tau02718.dat.pdf', bbox_inches = 'tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "817fab57",
+   "execution_count": 28,
+   "id": "8a66765e",
    "metadata": {},
    "outputs": [
     {
@@ -91,14 +91,14 @@
     "plt.xlabel('Number of sweeps')\n",
     "\n",
     "plt.legend()\n",
-    "plt.savefig('thermalization.pdf', bbox_inches = 'tight')\n",
+    "plt.savefig('energy_m100_w1_Nt10_tau02718.dat.pdf', bbox_inches = 'tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "792e954f",
+   "id": "55a93a1f",
    "metadata": {},
    "outputs": [],
    "source": []
