first normalizing flow Signed-off-by: Vsevolod2001 <vsevolod.chistyakov@gmail.com>

--- a/PIMC-py/Notes.ipynb
+++ b/PIMC-py/Notes.ipynb
@@ -179,7 +179,8 @@
     "$$f'=f^2-2(V-\\varepsilon_0)$$\n",
     "$$dx=-f(x)dt+\\delta W \\Longrightarrow P(x,t)$$\n",
     "$$\\psi(x,t)=Ne^{\\int_{x_0}^x f(s) ds}e^{-\\varepsilon_0t}P(x,t)$$\n",
-    "oscillator:\n",
+    "\n",
+    "$$\\large{oscillator}$$\n",
     "$$V(x)=\\frac{x^2}{2} \\qquad f(x)=x \\qquad \\varepsilon_0=\\frac12 $$\n",
     "$$dx=-xdt+\\delta W$$\n",
     "-Ornstein Ulenbeck process\n",
@@ -199,6 +200,41 @@
     "$$N=e^{x_0^2/2}$$\n",
     "$$\\psi(x,t)=\\frac{1}{\\sqrt{2\\pi sht}}\\exp\\left(\\frac{x^2 cht + x_0^2 cht-2xx_0}{2sht}\\right) \\qquad \\psi(x,0)=\\delta(x-x_0)$$\n",
     "$$K(x,x_0,t)=\\frac{1}{\\sqrt{2\\pi sht}}\\exp\\left(\\frac{x^2 cht + x_0^2 cht-2xx_0}{2sht}\\right)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "$${\\LARGE Normalizing\\, \\,flow}$$\n",
+    "$$x=f^{-1}(\\bar w,z)$$\n",
+    "$$h(w,\\bar w,z)=f(w,f^{-1}(\\bar w,z)) \\qquad h(w,w,z)=z$$\n",
+    "$$dh=H(w,\\bar w,z)dz \\qquad H(w,w,z)=I$$\n",
+    "$$L[f]=\\frac{1}{N_{sample}}\\sum_{sample} \\ln\\tilde p_f(x)+S(x)$$\n",
+    "$$\\tilde p_f(x)=r(f(w,x))\\left|det\\frac{\\partial f(w,x)}{\\partial x}\\right|$$\n",
+    "rewrite in terms of functions of $z$:\n",
+    "$$r(f(w,x))=r(f(w,f^{-1}(\\bar w,z)))=r(h(w,\\bar w,z))$$\n",
+    "$$dh=\\left. \\frac{\\partial f(w,x)}{\\partial x}\\right|_{x=f^{-1}(\\bar w,z)} \\times \\frac{\\partial f^{-1}(\\bar w,z)}{\\partial z}dz=Hdz$$\n",
+    "$$\\left. \\frac{\\partial f(w,x)}{\\partial x}\\right|_{x=f^{-1}(\\bar w,z)}=H \\times \\left(\\frac{\\partial f^{-1}(\\bar w,z)}{\\partial z}\\right)^{-1} $$\n",
+    "$$L[f]=\\frac{1}{N_{sample}}\\sum_{sample}\\ln r\\left(h(w,\\bar w,z)\\right)+\\ln\\left|detH(w,\\bar w, z)\\right|-\\ln \\left|\\det\\frac{\\partial f^{-1}(\\bar w,z)}{\\partial z}\\right|+S(f(\\bar w,z)) \\equiv L(w,\\bar w)$$\n",
+    "$$L(w,w)=\\frac{1}{N_{sample}}\\sum_{sample} S(f^{-1}(w,z))-\\ln \\left|\\det\\frac{\\partial f^{-1}(w,z)}{\\partial z}\\right|+const$$\n",
+    "$$w' \\to w - lr \\times \\left[\\nabla_w \\left.L(w,\\bar w)\\right]\\right|_{w=\\bar w} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$....................................$$\n",
+    "$$S(x)=\\frac12\\left(Ax,x\\right)$$\n",
+    "$$f(w,z)=wz$$\n",
+    "$$\\mathcal{L}(w) \\equiv L(w,w)-const=\\frac12<(Awz,wz)>-\\ln\\det w=tr\\left(w^TAw\\right)-\\ln|\\det w|$$\n",
+    "$$\\mathcal{L}(w+\\varepsilon h)=\\frac12 tr\\left(w^TAw\\right)+\\frac{\\varepsilon}{2} tr(h^TAw+w^TAh)-\\ln|\\det(w+\\varepsilon h)|+o(\\varepsilon)$$\n",
+    "$$\\ln|\\det(w+\\varepsilon h)|=\\ln\\left(|\\det(w)||\\det(I+\\varepsilon w^{-1}h)|\\right)=\\ln|\\det w|+\\ln(1+\\varepsilon tr\\left(w^{-1}h\\right))+o(\\varepsilon)=\\ln|\\det w|+\\varepsilon tr(w^{-1}h)$$\n",
+    "$$\\mathcal{L}(w+\\varepsilon h)=\\mathcal{L}(w)+\\varepsilon tr(w^TAh)-\\varepsilon tr(w^{-1}h)=\\mathcal{L}(w)+\\varepsilon tr\\left([w^TA-w^{-1}]h\\right)=\\mathcal{L}(w)+\\varepsilon tr\\left([w^TA-w^{-1}]h\\right)=\\mathcal{L}(w)+\\varepsilon tr\\left([Aw-(w^T)^{-1}]^Th\\right)$$\n",
+    "$$\\nabla \\mathcal{L}=Aw-(w^T)^{-1}$$"
    ]
   },
   {
