add notes about analytical distribution Signed-off-by: Vsevolod2001 <vsevolod.chistyakov@gmail.com>

--- a/PIMC-py/Notes.ipynb
+++ b/PIMC-py/Notes.ipynb
@@ -229,12 +229,99 @@
    "source": [
     "$$....................................$$\n",
     "$$S(x)=\\frac12\\left(Ax,x\\right)$$\n",
-    "$$f(w,z)=wz$$\n",
+    "$$f^{-1}(w,z)=wz$$\n",
     "$$\\mathcal{L}(w) \\equiv L(w,w)-const=\\frac12<(Awz,wz)>-\\ln\\det w=tr\\left(w^TAw\\right)-\\ln|\\det w|$$\n",
+    "$$O\\left(N_{nod}\\right)-\\mbox{invariance:} \\qquad \\mathcal{L}(wO)=\\mathcal{L}(w)$$\n",
     "$$\\mathcal{L}(w+\\varepsilon h)=\\frac12 tr\\left(w^TAw\\right)+\\frac{\\varepsilon}{2} tr(h^TAw+w^TAh)-\\ln|\\det(w+\\varepsilon h)|+o(\\varepsilon)$$\n",
     "$$\\ln|\\det(w+\\varepsilon h)|=\\ln\\left(|\\det(w)||\\det(I+\\varepsilon w^{-1}h)|\\right)=\\ln|\\det w|+\\ln(1+\\varepsilon tr\\left(w^{-1}h\\right))+o(\\varepsilon)=\\ln|\\det w|+\\varepsilon tr(w^{-1}h)$$\n",
     "$$\\mathcal{L}(w+\\varepsilon h)=\\mathcal{L}(w)+\\varepsilon tr(w^TAh)-\\varepsilon tr(w^{-1}h)=\\mathcal{L}(w)+\\varepsilon tr\\left([w^TA-w^{-1}]h\\right)=\\mathcal{L}(w)+\\varepsilon tr\\left([w^TA-w^{-1}]h\\right)=\\mathcal{L}(w)+\\varepsilon tr\\left([Aw-(w^T)^{-1}]^Th\\right)$$\n",
     "$$\\nabla \\mathcal{L}=Aw-(w^T)^{-1}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$................................................................................................................................$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "$$p(x)=\\frac{e^{-S(x)}}{Z} \\qquad x \\in \\mathbb{R}^N$$\n",
+    "$$S(x)=\\sum_{k=1}^{N} \\frac{(x_{k+1}-x_k)^2}{2a}+aV(x_k)=\\frac{1}{2a}\\sum_{k=1}^N \\left( x_{k+1}^2-2x_kx_{k+1}+x_k^2+2a^2V(x_k) \\right)=\\frac{1}{2a}\\sum_{k=1}^N \\left( 2x_{k}^2+2a^2V(x_k)-2x_kx_{k+1} \\right)$$\n",
+    "$$V(x)=\\frac{x^2}{2} \\qquad S(x)=\\frac{1}{2a}\\sum_{k=1}^N \\left( (2+a^2)x_{k}^2-2x_kx_{k+1} \\right)=\\frac{1}{2}(Ax,x) $$\n",
+    "$$A=\\frac{1}{a}\\left((2+a^2)I-T-T^T\\right)$$\n",
+    "$T$-generator of $\\mathbb{Z}_N$ (in regular representation)\n",
+    "$$T=\\left(\\begin{array}{cccc}\n",
+    "0 && 1 && ... && 0\\\\\n",
+    "0 && 0 && 1 ... && 0\\\\\n",
+    "... && ...&& ...&& ...\\\\\n",
+    "... && ... &&  0 && 1\\\\\n",
+    "1 && ... && ... && 0\n",
+    "\\end{array}\\right)$$\n",
+    "\n",
+    "$$T_{i,k}=\\delta_{i+1,k} \\qquad T^{T}=T^{-1} \\qquad T^N=I$$\n",
+    "$T$ can be diagonalized (by Schur's lemma)\n",
+    "$$Tv=\\lambda v \\qquad T^Nv=\\lambda^Nv=v \\qquad \\lambda^N=1 \\qquad \\lambda_k=\\varepsilon^k \\quad \\varepsilon=e^{\\frac{2\\pi i}{N}}$$\n",
+    "$$v_k=\\frac{1}{\\sqrt{N}}\\left( \\begin{array}{c}\n",
+    "\\varepsilon^{0 k} \\\\\n",
+    "\\varepsilon^{1k} \\\\\n",
+    "\\varepsilon^{2k} \\\\\n",
+    "...\\\\\n",
+    "\\varepsilon^{(N-1)k}\n",
+    "\\end{array} \\right)$$\n",
+    "$$(v_n,v_m)=\\frac{1}{N}\\sum_{s=0}^{N-1} \\varepsilon^{s(m-n)}=$$\n",
+    "$$=\\frac{1}{N}\\frac{\\varepsilon^{N(m-n)}-1}{\\varepsilon^{m-n}-1}=0 \\qquad \\mbox{in case $m\\ne n$}$$\n",
+    "$$=1 \\qquad \\mbox{in case $n=m$} $$\n",
+    "$$(v_n,v_m)=\\delta_{nm}$$\n",
+    "$$Av_k=\\frac{1}{a}\\left((2+a^2)Iv_k-Tv_k-T^{-1}v_k\\right)=\\frac{1}{a}\\left(2+a^2-\\varepsilon^k-\\varepsilon^{-k}\\right)v_k=\\frac{1}{a}\\left(a^2+2-2\\cos\\left(\\frac{2\\pi k}{N}\\right)\\right)v_k=\\frac{1}{a}\\left(a^2+4\\sin^2\\left(\\frac{\\pi k}{N}\\right)\\right)v_k\\equiv\\Lambda_k v_k$$\n",
+    "A-Hermitian, so there is a basis constructed from real eigenvectors of A.\n",
+    "\n",
+    "Case 1: N is even\n",
+    "there are 2 real eigenvectors $v_0=\\frac{1}{\\sqrt{N}}(1,1,...,1)^T$ $v_{N/2}=\\frac{1}{\\sqrt{N}}(1,-1,1,...,-1)^T$ and $\\frac{N-2}{2}$ pairs of complex-conjugate vectors $v_k=\\frac{u_k+iw_k}{\\sqrt{2}}$ $v_{N-k}=\\frac{u_k-iw_k}{\\sqrt{2}}$\n",
+    "\n",
+    "Case 2: N is odd\n",
+    "there is 1 real eigenvector $v_0=\\frac{1}{\\sqrt{N}}(1,1,...,1)^T$ and $\\frac{N-1}{2}$ pairs of complex-conjugate vectors $v_k=\\frac{u_k+iw_k}{\\sqrt{2}}$ $v_{N-k}=\\frac{u_k-iw_k}{\\sqrt{2}}$\n",
+    "\n",
+    "$$1=(v_k,v_k)=\\frac12(u_k,u_k)+\\frac12(w_k,w_k)$$\n",
+    "$$0=(u_k-iw_k,u_k+iw_k)=\\frac12(u_k,u_k)-\\frac12(w_k,w_k)+i(u_k,w_k)$$\n",
+    "$$(u_k,w_k)=0 \\qquad (u_k,u_k)=(w_k,w_k)=1$$\n",
+    "$$u_k=\\sqrt{\\frac{2}{N}}\\left( \\begin{array}{c}\n",
+    "1 \\\\\n",
+    "\\cos\\left(\\frac{2\\pi k}{N}\\right) \\\\\n",
+    "\\cos\\left(\\frac{4\\pi k}{N}\\right)\\\\\n",
+    "...\\\\\n",
+    "\\cos\\left(\\frac{2(N-1)\\pi k}{N}\\right)\n",
+    "\\end{array} \\right) \\qquad w_k=\\sqrt{\\frac{2}{N}}\\left( \\begin{array}{c}\n",
+    "0 \\\\\n",
+    "\\sin\\left(\\frac{2\\pi k}{N}\\right) \\\\\n",
+    "\\sin\\left(\\frac{4\\pi k}{N}\\right)\\\\\n",
+    "...\\\\\n",
+    "\\sin\\left(\\frac{2(N-1)\\pi k}{N}\\right)\n",
+    "\\end{array} \\right)$$\n",
+    "N-even:\n",
+    "$$O=||v_0,u_1,w_1,...,u_{N/2-1},w_{N/2-1},v_{N/2}||$$\n",
+    "N-odd:\n",
+    "$$O=||v_0,u_1,w_1,...,u_{N/2-1},w_{N/2-1}||$$\n",
+    "$$O^TO=I \\qquad O^TAO=diag(\\Lambda_0,\\Lambda_1,\\Lambda_1,...)$$\n",
+    "$$n=diag\\left(\\frac{1}{\\sqrt{\\Lambda_0}},\\frac{1}{\\sqrt{\\Lambda_1}},\\frac{1}{\\sqrt{\\Lambda_1}},...\\right)$$\n",
+    "$$C=On \\qquad C^TAC=I \\qquad A^{-1}=CC^T$$\n",
+    "$$x=Cz \\qquad S(Cz)=\\frac12(z,z)  \\qquad p_z(z)=p_x(Cz) |det C|=(2\\pi)^{-N/2}e^{-\\frac{1}{2}(z,z)}$$\n",
+    "\n",
+    "consider random variable:\n",
+    "$$\\eta_B=(Bz,z) \\qquad z\\sim\\mathcal{N}^N(0,1) \\qquad B^T=B$$\n",
+    "$$M\\eta=B_{ik}\\delta_{ik}=trB$$\n",
+    "$$M\\eta^2=B_{ik}B_{lm}M(z_iz_kz_lz_m)=B_{ik}B_{lm}(\\delta_{ik}\\delta_{lm}+\\delta_{il}\\delta_{km}+\\delta_{im}\\delta_{kl})=B_{ii}B_{ll}+B_{ik}B_{ik}+B_{ik}B_{ki}=(trB)^2+2trB^2$$\n",
+    "$$D\\eta=2trB^2$$\n",
+    "$$g_s=\\frac{1}{N}\\sum_{i=1}^Nx_{i}x_{i+s}=\\frac{1}{N}(T^sx,x)=\\frac{1}{N}(C^TT^sCz,z)=\\frac{1}{N}(C^{-1}A^{-1}T^sCz,z)$$\n",
+    "$$G_s=Mg_s=\\frac{1}{N}tr(A^{-1}T^s)=\\frac{1}{N}tr(C^TT^sC)$$\n",
+    "$$Dg_s=\\frac{2}{N^2}tr\\left((A^{-1}T^s)^2\\right)=\\frac{2}{N^2}tr\\left((C^TT^sC)^2\\right)$$\n",
+    "$$G_0=\\sum_{k=0}^{N-1}\\frac{1}{N\\Lambda_k}=\\sum_{k=0}^{N-1}\\frac{1}{\\beta+\\frac{4N^2}{\\beta}sin^2\\left(\\frac{\\pi k}{N}\\right)}$$\n",
+    "$$DG_0=2\\sum_{k=0}^{N-1} \\frac{1}{\\left(\\beta+\\frac{4N^2}{\\beta}\\sin^2\\left(\\frac{\\pi k}{N}\\right)\\right)^2}$$"
    ]
   },
   {
