--- a/PIMC-py/Notes.ipynb
+++ b/PIMC-py/Notes.ipynb
@@ -230,7 +230,7 @@
     "$$....................................$$\n",
     "$$S(x)=\\frac12\\left(Ax,x\\right)$$\n",
     "$$f^{-1}(w,z)=wz$$\n",
-    "$$\\mathcal{L}(w) \\equiv L(w,w)-const=\\frac12<(Awz,wz)>-\\ln\\det w=tr\\left(w^TAw\\right)-\\ln|\\det w|$$\n",
+    "$$\\mathcal{L}(w) \\equiv L(w,w)-const=\\frac12<(Awz,wz)>-\\ln\\det w=\\frac12tr\\left(w^TAw\\right)-\\ln|\\det w|$$\n",
     "$$O\\left(N_{nod}\\right)-\\mbox{invariance:} \\qquad \\mathcal{L}(wO)=\\mathcal{L}(w)$$\n",
     "$$\\mathcal{L}(w+\\varepsilon h)=\\frac12 tr\\left(w^TAw\\right)+\\frac{\\varepsilon}{2} tr(h^TAw+w^TAh)-\\ln|\\det(w+\\varepsilon h)|+o(\\varepsilon)$$\n",
     "$$\\ln|\\det(w+\\varepsilon h)|=\\ln\\left(|\\det(w)||\\det(I+\\varepsilon w^{-1}h)|\\right)=\\ln|\\det w|+\\ln(1+\\varepsilon tr\\left(w^{-1}h\\right))+o(\\varepsilon)=\\ln|\\det w|+\\varepsilon tr(w^{-1}h)$$\n",
@@ -322,6 +322,50 @@
     "$$Dg_s=\\frac{2}{N^2}tr\\left((A^{-1}T^s)^2\\right)=\\frac{2}{N^2}tr\\left((C^TT^sC)^2\\right)$$\n",
     "$$G_0=\\sum_{k=0}^{N-1}\\frac{1}{N\\Lambda_k}=\\sum_{k=0}^{N-1}\\frac{1}{\\beta+\\frac{4N^2}{\\beta}sin^2\\left(\\frac{\\pi k}{N}\\right)}$$\n",
     "$$DG_0=2\\sum_{k=0}^{N-1} \\frac{1}{\\left(\\beta+\\frac{4N^2}{\\beta}\\sin^2\\left(\\frac{\\pi k}{N}\\right)\\right)^2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "$$............................................................................................$$\n",
+    "The simpliest example-harmonic oscillator\n",
+    "\n",
+    "$$\\tilde H=\\frac{P^2}{2m}+\\frac{m\\omega^2 X^2}{2} \\qquad [X,P]=i\\hbar$$\n",
+    "We introduce dimensionless variables:\n",
+    "    $$\\tilde H=E H \\quad X=Lx \\quad P=\\Pi p$$\n",
+    "    $$E=\\hbar \\omega \\quad L=\\sqrt{\\frac{\\hbar}{m\\omega}} \\quad \\Pi=\\sqrt{\\hbar m \\omega}$$\n",
+    "And we transform our problem to the previously considered type \n",
+    "$$H=\\frac{p^2}{2}+\\frac{x^2}{2}$$\n",
+    "\n",
+    "Relativistic oscillator\n",
+    "$$\\tilde H=\\sqrt{P^2c^2+m^2c^4}+\\frac{m\\omega^2X^2}{2} \\qquad [X,P]=i\\hbar$$\n",
+    "There are four dimension variables: $\\hbar, m, c, \\omega$\n",
+    "\n",
+    "Case1\n",
+    "basic scales: $\\hbar, m, \\omega$\n",
+    "$$\\Pi=\\sqrt{\\hbar m\\omega} \\qquad L=\\sqrt{\\frac{\\hbar}{m\\omega}} \\qquad E=\\hbar \\omega$$\n",
+    "$$\\hbar \\omega H=\\sqrt{p^2\\hbar m \\omega c^2+m^2c^4}+\\frac{1}{2}\\frac{\\hbar}{ m \\omega}m\\omega^2 x^2 $$\n",
+    "$$H=\\frac{1}{\\sigma}\\sqrt{p^2\\sigma+1}+\\frac{x^2}{2} \\qquad \\sigma=\\frac{\\hbar \\omega}{mc^2}$$\n",
+    "non-relativistic:\n",
+    "$$\\sigma<<1 \\qquad H=\\frac{p^2}{2}+\\frac{x^2}{2}+\\frac{1}{\\sigma}$$\n",
+    "$$\\sigma>>1 \\qquad H=\\frac{|p|}{\\sqrt{\\sigma}}+\\frac{x^2}{2}$$\n",
+    "\n",
+    "Case2:\n",
+    "basic scales: $\\hbar, \\omega, c$\n",
+    "$$L=\\frac{c}{\\omega} \\qquad \\Pi=\\frac{\\hbar\\omega}{c} \\qquad E=\\hbar \\omega$$\n",
+    "$$\\hbar \\omega H=\\sqrt{p^2c^2\\hbar^2\\omega^2/c^2+m^2c^4}+\\frac{m\\omega^2x^2}{2}\\frac{c^2}{\\omega^2}$$\n",
+    "$$H=\\frac{1}{\\sigma}\\sqrt{p^2\\sigma^2+1}+\\frac{x^2}{2\\sigma} \\qquad \\sigma=\\frac{\\hbar \\omega}{mc^2}$$\n",
+    "non-relativistic:\n",
+    "$$\\sigma<<1 \\qquad H=\\frac{p^2\\sigma}{2}+\\frac{x^2}{2\\sigma}$$\n",
+    "relativistic:\n",
+    "$$\\sigma>>1 \\qquad H=|p|+\\frac{x^2}{2\\sigma}$$\n",
+    "\n",
+    "Case3: \n",
+    "basic scales: $m,c,\\hbar$\n",
+    "$$$$"
    ]
   },
   {
