new systems+notes
Signed-off-by: Vsevolod2001 <vsevolod.chistyakov@gmail.com>

--- a/PIMC-py/Notes.ipynb
+++ b/PIMC-py/Notes.ipynb
@@ -218,7 +218,7 @@
     "$$r(f(w,x))=r(f(w,f^{-1}(\\bar w,z)))=r(h(w,\\bar w,z))$$\n",
     "$$dh=\\left. \\frac{\\partial f(w,x)}{\\partial x}\\right|_{x=f^{-1}(\\bar w,z)} \\times \\frac{\\partial f^{-1}(\\bar w,z)}{\\partial z}dz=Hdz$$\n",
     "$$\\left. \\frac{\\partial f(w,x)}{\\partial x}\\right|_{x=f^{-1}(\\bar w,z)}=H \\times \\left(\\frac{\\partial f^{-1}(\\bar w,z)}{\\partial z}\\right)^{-1} $$\n",
-    "$$L[f]=\\frac{1}{N_{sample}}\\sum_{sample}\\ln r\\left(h(w,\\bar w,z)\\right)+\\ln\\left|detH(w,\\bar w, z)\\right|-\\ln \\left|\\det\\frac{\\partial f^{-1}(\\bar w,z)}{\\partial z}\\right|+S(f(\\bar w,z)) \\equiv L(w,\\bar w)$$\n",
+    "$$L[f]=\\frac{1}{N_{sample}}\\sum_{sample}\\ln r\\left(h(w,\\bar w,z)\\right)+\\ln\\left|detH(w,\\bar w, z)\\right|-\\ln \\left|\\det\\frac{\\partial f^{-1}(\\bar w,z)}{\\partial z}\\right|+S(f^{-1}(\\bar w,z)) \\equiv L(w,\\bar w)$$\n",
     "$$L(w,w)=\\frac{1}{N_{sample}}\\sum_{sample} S(f^{-1}(w,z))-\\ln \\left|\\det\\frac{\\partial f^{-1}(w,z)}{\\partial z}\\right|+const$$\n",
     "$$w' \\to w - lr \\times \\left[\\nabla_w \\left.L(w,\\bar w)\\right]\\right|_{w=\\bar w} $$"
    ]
@@ -365,22 +365,110 @@
     "\n",
     "Case3: \n",
     "basic scales: $m,c,\\hbar$\n",
-    "$$$$"
+    "$$L=\\frac{\\hbar}{mc} \\qquad \\Pi=mc \\qquad E=mc^2$$\n",
+    "$$Hmc^2=\\sqrt{p^2m^2c^4+m^2c^4}+\\frac{m\\omega^2x^2}{2}\\frac{\\hbar^2}{m^2c^2}$$\n",
+    "$$H=\\sqrt{p^2+1}+\\frac{\\sigma^2 x^2}{2}$$\n",
+    "\n",
+    "Case4:\n",
+    "basic scales: $m, c, \\omega$\n",
+    "$$L=c/\\omega \\qquad \\Pi=mc \\qquad E=mc^2$$\n",
+    "$$Hmc^2=\\sqrt{p^2m^2c^4+m^2c^4}+\\frac{m\\omega^2 x^2}{2}\\frac{c^2}{\\omega^2}$$\n",
+    "$$H=\\sqrt{p^2+1}+\\frac{x^2}{2} \\qquad [x,p]=\\frac{\\hbar}{\\frac{c}{\\omega}mc}=\\frac{\\hbar\\omega}{mc^2}=\\sigma$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "$$..........................................................................................................................$$\n",
+    "$$S_E=\\int_0^{\\beta_{ph}} H_{ph} dt_{ph}$$\n",
+    "$$H_{ph}=EH \\qquad x_{ph}=Lx \\qquad p_{ph}=\\Pi p$$\n",
+    "$$E=\\frac{\\Pi L}{T} \\qquad t_{ph}=\\frac{\\Pi L}{E}t $$\n",
+    "$$S_E=\\Pi L\\int_0^{\\frac{E\\beta_{ph}}{\\Pi L}} dt  H $$\n",
+    "$$\\Pi L=1 \\qquad \\beta=E\\beta_{ph} \\qquad S_E=\\int_0^{\\beta} dt  H$$\n",
+    "$$E\\sim E_1-E_0$$\n",
+    "$$H_{ph}=\\sqrt{p^2_{ph}+m^2}+\\frac{m\\omega^2 x^2_{ph}}{2}$$\n",
+    "$$H=\\sqrt{\\frac{\\Pi^2}{E^2}p^2+\\frac{m^2}{E^2}}+\\frac{m\\omega^2}{\\Pi^2 E} \\frac{x^2}{2}$$\n",
+    "$$\\Pi=m^{\\alpha}\\omega^{1-\\alpha}\\qquad E=m^{\\gamma}\\omega^{1-\\gamma}$$\n",
+    "$$\\sigma=\\frac{\\omega}{m} \\qquad \\frac{\\Pi}{E}=\\sigma^{\\gamma-\\alpha} \\qquad \\frac{m}{E}=\\sigma^{\\gamma-1} \\qquad \\frac{m\\omega^2}{\\Pi^2E}=\\sigma^{2\\alpha+\\gamma-1}$$\n",
+    "$$H=\\sqrt{p^2 \\sigma^{2\\gamma-2\\alpha}+\\sigma^{2\\gamma-2}}+\\sigma^{2\\alpha+\\gamma-1}\\frac{x^2}{2}$$\n",
+    "$$\\sigma<<1 \\qquad H=\\sigma^{\\gamma-1}+p^2\\sigma^{1-2\\alpha+\\gamma}+\\sigma^{2\\alpha+\\gamma-1}\\frac{x^2}{2}$$\n",
+    "$$\\sigma>>1 \\qquad H=\\sigma^{\\gamma-\\alpha}|p|+\\sigma^{2\\alpha+\\gamma-1}\\frac{x^2}{2}$$\n",
+    "$$\\alpha=\\frac12-\\frac16 \\Theta_1(\\sigma) \\qquad \\gamma=\\frac13\\Theta_2(\\sigma) \\qquad \\lim_{\\sigma \\to 0}\\Theta_{1,2}(\\sigma)=0 \\qquad \\lim_{\\sigma \\to \\infty}\\Theta_{1,2}(\\sigma)=1 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$.............................................................................$$\n",
+    "\n",
+    "\n",
+    "$$\\langle O(x(t_1),...,x(t_n))\\rangle=\\int D[x(t)]\\frac{\\exp\\left(-S[x(t)]\\right)}{Z} O(x(t_1),...,x(t_n))\\approx$$\n",
+    "$$\\approx \\int d^Nx \\frac{\\exp\\left(-S(x)\\right)}{Z} O(x) \\approx \\frac{1}{M}\\sum_{k=1}^M O(X_k)$$\n",
+    "\\\\\n",
+    "\\\\\n",
+    "\\\\\n",
+    "\n",
+    "$$X_k\\sim P(x) \\qquad P(x)= \\frac{\\exp\\left(-S(x)\\right)}{Z}$$\n",
+    "\n",
+    "\\\\\n",
+    "\\\\\n",
+    "$$z\\sim \\mathbb{N}^N(0,1) \\qquad x=g(z) \\qquad x \\sim P(x) $$\n",
+    "$$g=A_n\\circ...\\circ A_1$$\n",
+    "$$z=u+v$$\n",
+    "$$A(u)=u \\qquad [A(v)]_k=e^{-\\theta_{1k}(u)}\\left(v_k-\\theta_{2k}(u)\\right)$$\n",
+    "$$\\theta: \\mathbb{R}^{N/2} \\to \\mathbb{R}^N$$\n",
+    "\\\\\n",
+    "\\\\\n",
+    "\n",
+    "$$P_g(x)=r(z)\\left|det\\frac{\\partial g}{\\partial z}\\right|^{-1} \\qquad z=g^{-1}(x) \\qquad r(z)=\\frac{1}{(2\\pi)^{N/2}}\\exp\\left(-\\frac12 z^2\\right)$$\n",
+    "$$L[w]=D_{KL}(P_g|P)-\\ln Z=\\int dx P_g(x)\\left(\\ln P_g(x)+S(x)\\right)=\\frac{1}{M}\\sum_{i=1}^{M} \\left(S(x_i)+\\ln P_g(x_i)\\right)$$\n",
+    "$$L[w]=\\frac{1}{M}\\sum_{i=1}^{M} \\left(S(g(z_i))-\\ln \\left|\\det\\frac{\\partial g}{\\partial z}\\right|\\right)+const$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "$$G(s)=\\frac{1}{N}\\sum_{i=1}^N\\langle x_{i}x_{i+s}\\rangle$$\n",
+    "\n",
+    "\n",
+    "$$H=\\frac{p^2}{2}+V(x)$$\n",
+    "$$S(x)=\\sum_{k=1}^{N} \\frac{(x_{k+1}-x_k)^2}{2a}+aV(x_k)$$\n",
+    "$$V(x)=\\frac{x^2}{2} \\qquad S(x)=\\frac{1}{2a}\\sum_{k=1}^N \\left( (2+a^2)x_{k}^2-2x_kx_{k+1} \\right)=\\frac{1}{2}(Ax,x) $$\n",
+    "$$L(w)=\\frac12<(Awz,wz)>-\\ln\\det w=\\frac12tr\\left(w^TAw\\right)-\\ln|\\det w|$$\n",
+    "$$DL[w]=O(N^3)$$\n",
+    "$$g(z)=wz \\qquad \\nabla_w L=Aw-(w^T)^{-1} \\qquad w=On$$\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "\n",
+    "$$H=\\sqrt{p^2+m^2}+\\frac{m\\omega^2x^2}{2}$$\n",
+    "$$S(x)=\\sum_{i=1}^N \\left\\{ \\ln \\left( \\frac{y_i}{K_1(ma y_i)} \\right) + a\\frac{m\\omega^2 x_i^2}{2} \\right\\}, \\qquad  y_i=\\sqrt{1+\\frac{(x_{i+1}-x_i)^2}{a^2}}$$\n",
+    "$$H=|p|+\\frac{x^2}{2}$$\n",
+    "$$S(x)=\\sum_{i=1}^N \\left\\{ \\ln \\left( 1+\\frac{(x_{i+1}-x_i)^2}{a^2} \\right) + a\\frac{x_i^2}{2} \\right\\}$$\n",
+    "\n",
+    "\\\\\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -394,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
