--- a/PIMC-py/Normalizing flow/L-layer(lightning).ipynb
+++ b/PIMC-py/Normalizing flow/L-layer(lightning).ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "112f3bf4-1631-430c-b467-8b1dd7161f6d",
+   "execution_count": 1,
+   "id": "2c367363",
    "metadata": {
     "execution": {
      "iopub.status.busy": "2024-01-24T16:44:28.821474960Z",
@@ -12,14 +12,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "Limits exceeded",
-     "evalue": "Not enough units in project to continue executions. Please contact your project admin.\n",
-     "output_type": "error",
-     "traceback": []
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import Callable, List, Tuple\n",
     "\n",
@@ -35,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c80bf496-81d4-4ed2-9151-a8023765d768",
+   "id": "7bb50635",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-01-21T16:57:44.641553Z",
@@ -89,8 +82,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "fabe536f-5c4f-44b0-865c-d1d4f6962016",
+   "execution_count": 8,
+   "id": "4177d0f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from NFandist import get_O, get_A\n",
+    "from NFconstants import N_nod, beta\n",
+    "O=(torch.tensor(get_O(N_nod)).float()).to(device)\n",
+    "Ot=torch.t(O)\n",
+    "print(Ot.requires_grad)\n",
+    "\n",
+    "A=(torch.tensor(get_A(N_nod,beta)).float()).to(device)\n",
+    "I=(torch.eye(N_nod)).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a112bc9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class simple_nf(nn.Module):\n",
+    "     \n",
+    "    def __init__(self,layer,ort=True):\n",
+    "        super().__init__()\n",
+    "        self.layer=layer\n",
+    "        self.ort=ort\n",
+    "\n",
+    "    def log_abs_det(self):\n",
+    "        lad=self.layer.log_abs_det()\n",
+    "        return lad\n",
+    "    \n",
+    "    def forward(self,x):\n",
+    "        y=self.layer(x)\n",
+    "        if self.ort:\n",
+    "            y=torch.matmul(y,Ot)\n",
+    "        return y\n",
+    "        \n",
+    "    def metric(self):\n",
+    "        with torch.no_grad():\n",
+    "            if self.ort:\n",
+    "                B=torch.matmul(Ot,torch.matmul(A,O))\n",
+    "            else:\n",
+    "                B=A\n",
+    "            met=torch.linalg.matrix_norm(self.layer.adj(B)-I)\n",
+    "        return met  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1ab3fa53",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-01-21T16:57:45.696455Z",
@@ -106,6 +158,7 @@
     "from NFconstants import N_nod, beta , N_traj\n",
     "from NFandist import get_A, get_C\n",
     "A=(torch.tensor(get_A(N_nod,beta)).float()).to(device)\n",
+    "I=(torch.eye(N_nod)).to(device)\n",
     "def set_random_seed(seed):\n",
     "    torch.manual_seed(seed)\n",
     "    np.random.seed(seed)\n",
@@ -113,14 +166,13 @@
     "def A_I(model):\n",
     "    with torch.no_grad():\n",
     "        A_D=model.adj(A)\n",
-    "        I=(torch.eye(N_nod)).to(device)\n",
     "    return torch.linalg.matrix_norm(A_D-I)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0f5652ef-d577-4587-8823-b3e854cde0c5",
+   "execution_count": 11,
+   "id": "b66a3749",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-01-21T16:57:46.453500Z",
@@ -146,8 +198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c5ae26be-6ce2-4b2c-a8d1-f285b7ea61aa",
+   "execution_count": 12,
+   "id": "d85bbd7b",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-01-21T16:57:48.022398Z",
@@ -192,15 +244,16 @@
     "\n",
     "\n",
     "    def on_train_epoch_end(self):\n",
-    "        metric=A_I(self.model)\n",
+    "        metric=self.model.metric()\n",
     "        self.log(\"metric\",metric, prog_bar=True)\n",
+    "        #self.log(\"metric\",A_I(self.model), prog_bar=True)\n",
     "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "88a6e203-5c97-4d0d-afdc-2da798efc8a3",
+   "execution_count": 13,
+   "id": "2b5b0325",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-01-21T16:57:49.272063Z",
@@ -216,36 +269,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPU available: True (cuda), used: True\n",
+      "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "2024-01-21 16:57:53.937626: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-01-21 16:57:55.309223: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "Missing logger folder: logs/nf\\lightning_logs\n",
       "\n",
       "  | Name  | Type      | Params\n",
       "------------------------------------\n",
-      "0 | model | L         | 5.0 K \n",
+      "0 | model | simple_nf | 1.3 K \n",
       "1 | loss  | KL_with_S | 0     \n",
       "------------------------------------\n",
-      "5.0 K     Trainable params\n",
+      "1.3 K     Trainable params\n",
       "0         Non-trainable params\n",
-      "5.0 K     Total params\n",
-      "0.020     Total estimated model params size (MB)\n",
-      "/home/jupyter/.local/lib/python3.10/site-packages/pytorch_lightning/loops/fit_loop.py:293: The number of training batches (4) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
+      "1.3 K     Total params\n",
+      "0.005     Total estimated model params size (MB)\n",
+      "C:\\ProgramData\\anaconda3\\Lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:441: The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=3` in the `DataLoader` to improve performance.\n",
+      "C:\\ProgramData\\anaconda3\\Lib\\site-packages\\pytorch_lightning\\loops\\fit_loop.py:293: The number of training batches (4) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0505e07e69e04cbb902248b22a6b02cc",
+       "model_id": "ca38da3f0c12440086880bc80ab5661c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Training: |          | 0/? [00:00<?, ?it/s]"
+       "Training: |                                                                                      | 0/? [00:00<…"
       ]
      },
      "metadata": {},
@@ -255,7 +306,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jupyter/.local/lib/python3.10/site-packages/pytorch_lightning/trainer/call.py:54: Detected KeyboardInterrupt, attempting graceful shutdown...\n"
+      "C:\\ProgramData\\anaconda3\\Lib\\site-packages\\pytorch_lightning\\trainer\\call.py:54: Detected KeyboardInterrupt, attempting graceful shutdown...\n"
      ]
     }
    ],
@@ -265,7 +316,8 @@
     "\n",
     "set_random_seed(42)\n",
     "L_layer=L(N_nod)\n",
-    "pipeline=Pipeline(model=L_layer,criterion=KL_osc, optimizer_class=torch.optim.Adam,\n",
+    "snf=simple_nf(L_layer,ort=True)\n",
+    "pipeline=Pipeline(model=snf,criterion=KL_osc, optimizer_class=torch.optim.Adam,\n",
     "        optimizer_kwargs={\"lr\": 0.001, \"weight_decay\": 0.01})\n",
     "trainer = pl.Trainer(\n",
     "    max_epochs=1000,\n",
@@ -274,13 +326,13 @@
     ")\n",
     "\n",
     "trainer.fit(model=pipeline, train_dataloaders=train_loader)\n",
-    "torch.save(L_layer.state_dict(), \"L_layer_weights.pth\")"
+    "torch.save(snf.state_dict(), \"L_layer_weights.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f97b4fe0-3eae-4375-b3c0-447d15fce267",
+   "execution_count": 56,
+   "id": "836f35aa",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-01-21T17:15:05.450939Z",
@@ -288,27 +340,42 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Error(s) in loading state_dict for simple_nf:\n\tMissing key(s) in state_dict: \"layer.weight\". \n\tUnexpected key(s) in state_dict: \"weight\". ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-56-11624d6ca6fe>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msimple_nf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mL_layer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#model=L_layer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"L_layer_weights.pth\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m pipeline=Pipeline(model=model,criterion=KL_osc, optimizer_class=torch.optim.Adam,\n\u001b[0;32m      6\u001b[0m         optimizer_kwargs={\"lr\": 0.001,\"weight_decay\": 0})\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\torch\\nn\\modules\\module.py\u001b[0m in \u001b[0;36mload_state_dict\u001b[1;34m(self, state_dict, strict)\u001b[0m\n\u001b[0;32m   1481\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror_msgs\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1482\u001b[0m             raise RuntimeError('Error(s) in loading state_dict for {}:\\n\\t{}'.format(\n\u001b[1;32m-> 1483\u001b[1;33m                                self.__class__.__name__, \"\\n\\t\".join(error_msgs)))\n\u001b[0m\u001b[0;32m   1484\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0m_IncompatibleKeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmissing_keys\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0munexpected_keys\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1485\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for simple_nf:\n\tMissing key(s) in state_dict: \"layer.weight\". \n\tUnexpected key(s) in state_dict: \"weight\". "
+     ]
+    }
+   ],
    "source": [
     "L_layer=L(N_nod)\n",
-    "L_layer.load_state_dict(torch.load(\"L_layer_weights.pth\"))\n",
-    "pipeline=Pipeline(model=L_layer,criterion=KL_osc, optimizer_class=torch.optim.LBFGS,\n",
-    "        optimizer_kwargs={\"lr\": 0.00001})\n",
+    "model=simple_nf(L_layer,ort=True)\n",
+    "#model=L_layer\n",
+    "model.load_state_dict(torch.load(\"L_layer_weights.pth\"))\n",
+    "pipeline=Pipeline(model=model,criterion=KL_osc, optimizer_class=torch.optim.Adam,\n",
+    "        optimizer_kwargs={\"lr\": 0.001,\"weight_decay\": 0})\n",
     "\n",
     "trainer = pl.Trainer(\n",
-    "    max_epochs=200,\n",
+    "    max_epochs=2000,\n",
     "    logger=TensorBoardLogger(save_dir=f\"logs/nf\"),\n",
     "    num_sanity_val_steps=0,\n",
     ")\n",
     "\n",
     "trainer.fit(model=pipeline, train_dataloaders=train_loader)\n",
-    "torch.save(L_layer.state_dict(), \"L_layer_weights.pth\")"
+    "torch.save(model.state_dict(), \"L_layer_weights.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "77bf0750-567a-4fc6-bc72-260650ff1c7b",
+   "execution_count": 55,
+   "id": "ad5b7542",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-01-21T14:46:43.974083Z",
@@ -324,19 +391,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 9.4951e-01,  8.6635e-03, -7.5204e-03,  ...,  2.5913e-03,\n",
-      "          1.9455e-03,  1.1769e-03],\n",
-      "        [ 8.6637e-03,  9.9896e-01,  1.1440e-03,  ..., -1.1417e-08,\n",
-      "         -8.2279e-09, -2.6673e-09],\n",
-      "        [-7.5205e-03,  1.1440e-03,  9.9896e-01,  ...,  1.3134e-09,\n",
-      "          2.8978e-10,  4.2857e-11],\n",
+      "tensor([[ 9.7450e-01,  6.8725e-03,  1.6029e-03,  ...,  2.9996e-02,\n",
+      "          1.2987e-02, -1.0077e-02],\n",
+      "        [ 6.8728e-03,  1.0180e+00, -1.9002e-02,  ...,  4.0149e-04,\n",
+      "         -1.8119e-02,  1.3663e-03],\n",
+      "        [ 1.6030e-03, -1.9002e-02,  9.8187e-01,  ...,  1.0302e-02,\n",
+      "         -7.3258e-03,  9.5749e-03],\n",
       "        ...,\n",
-      "        [ 2.5912e-03, -1.1418e-08,  1.3115e-09,  ...,  1.0000e+00,\n",
-      "         -1.6694e-08,  4.6356e-08],\n",
-      "        [ 1.9452e-03, -8.2257e-09,  2.8788e-10,  ...,  2.7856e-08,\n",
-      "          1.0000e+00,  3.0513e-08],\n",
-      "        [ 1.1774e-03, -2.6683e-09,  4.3626e-11,  ...,  1.8042e-09,\n",
-      "         -3.1326e-08,  1.0000e+00]], device='cuda:0', grad_fn=<MmBackward0>)\n"
+      "        [ 2.9996e-02,  4.0149e-04,  1.0302e-02,  ...,  9.7388e-01,\n",
+      "         -4.3421e-03, -1.0112e-02],\n",
+      "        [ 1.2987e-02, -1.8119e-02, -7.3258e-03,  ..., -4.3421e-03,\n",
+      "          1.0155e+00, -2.4950e-02],\n",
+      "        [-1.0077e-02,  1.3663e-03,  9.5749e-03,  ..., -1.0112e-02,\n",
+      "         -2.4950e-02,  1.0105e+00]], grad_fn=<MmBackward0>)\n"
      ]
     }
    ],
@@ -348,16 +415,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "221b4bbf-25e7-4c2f-9a81-c0d892dfb961",
+   "execution_count": 54,
+   "id": "ca4c84d1",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 1.0000e+00,  5.8752e-08, -1.3914e-08,  ...,  2.2872e-08,\n",
+      "          2.5498e-07,  0.0000e+00],\n",
+      "        [ 4.0992e-08,  1.0000e+00, -2.7618e-08,  ...,  2.2800e-08,\n",
+      "         -2.4269e-08,  2.8902e-08],\n",
+      "        [-5.8108e-10, -9.3866e-08,  1.0000e+00,  ...,  4.4837e-09,\n",
+      "         -4.7684e-07, -5.5179e-08],\n",
+      "        ...,\n",
+      "        [-1.2623e-09,  5.3057e-09, -3.6523e-10,  ...,  1.0000e+00,\n",
+      "         -3.5937e-09,  1.9324e-08],\n",
+      "        [-7.7986e-10, -1.9018e-10,  1.1782e-10,  ...,  5.4074e-10,\n",
+      "          1.0000e+00, -2.6425e-09],\n",
+      "        [ 7.4506e-09, -1.3039e-08, -2.9977e-09,  ..., -1.6764e-08,\n",
+      "         -5.8208e-09,  1.0000e+00]])\n",
+      "tensor([[ 2.0000e-01, -7.7642e-09, -1.9571e-09,  ..., -1.1199e-07,\n",
+      "         -3.6891e-07,  0.0000e+00],\n",
+      "        [-6.7893e-10,  2.7885e-01, -2.3201e-08,  ...,  2.8581e-08,\n",
+      "          3.0639e-09,  3.8130e-08],\n",
+      "        [-4.9183e-10, -5.3233e-09,  2.7885e-01,  ..., -8.5684e-10,\n",
+      "         -9.5367e-07, -5.2030e-07],\n",
+      "        ...,\n",
+      "        [ 3.9386e-09, -8.6246e-11, -2.1778e-09,  ...,  2.0121e+01,\n",
+      "         -7.6323e-08, -8.9375e-08],\n",
+      "        [ 9.0515e-10,  3.1814e-11, -8.4611e-11,  ..., -3.0659e-08,\n",
+      "          2.0121e+01, -1.7668e-07],\n",
+      "        [ 7.4506e-09, -3.8650e-08, -2.2585e-08,  ...,  1.1921e-07,\n",
+      "          7.4506e-09,  2.0200e+01]])\n",
+      "tensor(2.4544e-06)\n"
+     ]
+    }
+   ],
+   "source": [
+    "C=(torch.tensor(get_C(N_nod,beta)).float()).to(device)\n",
+    "Ct=torch.t(C)\n",
+    "A_e=torch.matmul(Ct,torch.matmul(A,C))\n",
+    "print(A_e)\n",
+    "A_D=torch.matmul(Ot,torch.matmul(A,O))\n",
+    "print(A_D)\n",
+    "print(torch.linalg.matrix_norm(A_e-I))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e94e763",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DataSphere Kernel",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -371,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
