--- a/PIMC-py/Normalizing flow/L-layer(lightning).ipynb
+++ b/PIMC-py/Normalizing flow/L-layer(lightning).ipynb
@@ -28,6 +28,154 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ffdb9efa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "import numpy as np\n",
+    "\n",
+    "class L1(nn.Linear):\n",
+    "    def __init__(self,n):\n",
+    "        super().__init__(n*(n-1)//2,1,bias=False)\n",
+    "        self.n=n\n",
+    "        self.mask2d=torch.zeros((n*(n-1) // 2),dtype=int)\n",
+    "        for i in range(1,n):\n",
+    "            for j in range(i):\n",
+    "                self.mask2d[i*(i-1)//2+j]=i*n+j\n",
+    "        self.d_ind=[(n+1)*k for k in range(n)]\n",
+    "        self.ones=torch.ones((n))\n",
+    "    \n",
+    "    def anti_flatten(self):\n",
+    "        n=self.n\n",
+    "        L=torch.zeros((n**2)).to(device)\n",
+    "        L[self.mask2d]=self.weight.to(device)\n",
+    "        L[self.d_ind]=self.ones\n",
+    "        L=torch.reshape(L,(n,n)).to(device)\n",
+    "        return L        \n",
+    "            \n",
+    "    def log_abs_det(self):\n",
+    "        return 0\n",
+    "    \n",
+    "    def forward(self,x):\n",
+    "        Lwt=torch.t(self.anti_flatten())\n",
+    "        return torch.matmul(x,Lwt)\n",
+    "    \n",
+    "    def g(self,z):\n",
+    "        return self.forward(z), torch.zeros((z.shape[0]))\n",
+    "        \n",
+    "    def adj(self,mat):\n",
+    "        Lw=self.anti_flatten()\n",
+    "        Lwt=torch.t(Lw)\n",
+    "        D=torch.matmul(Lwt,torch.matmul(mat,Lw))\n",
+    "        return D\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "02681dbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "import numpy as np\n",
+    "\n",
+    "class D(nn.Linear):\n",
+    "    def __init__(self,n):\n",
+    "        super().__init__(n,1,bias=False)\n",
+    "        self.n=n\n",
+    "        self.d_ind=[(n+1)*k for k in range(n)]\n",
+    "    \n",
+    "    def anti_flatten(self):\n",
+    "        n=self.n\n",
+    "        D=torch.zeros((n**2)).to(device)\n",
+    "        D[self.d_ind]=self.weight.to(device)\n",
+    "        D=torch.reshape(D,(n,n)).to(device)\n",
+    "        return D        \n",
+    "            \n",
+    "    def log_abs_det(self):\n",
+    "        ABS=torch.abs(self.weight)\n",
+    "        l=torch.log(ABS)\n",
+    "        lad=torch.sum(l)\n",
+    "        return lad\n",
+    "    \n",
+    "    def forward(self,x):\n",
+    "        D=self.anti_flatten()\n",
+    "        return torch.matmul(x,D)\n",
+    "    \n",
+    "    def g(self,z):\n",
+    "        lad=self.log_abs_det()\n",
+    "        return self.forward(z), lad * torch.ones((z.shape[0]))\n",
+    "        \n",
+    "    def adj(self,mat):\n",
+    "        Lw=self.anti_flatten()\n",
+    "        Lwt=torch.t(Lw)\n",
+    "        D=torch.matmul(Lwt,torch.matmul(mat,Lw))\n",
+    "        return D\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "de40e85b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m=L1(10)\n",
+    "#print(m.anti_flatten())\n",
+    "d=D(10)\n",
+    "#print(d.anti_flatten())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a0c95929",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.1542,  0.0047,  0.0486,  0.0127,  0.1100, -0.0590, -0.0167, -0.0297,\n",
+      "         -0.2712, -0.2027],\n",
+      "        [-0.0516,  0.0984,  0.0572,  0.1036,  0.1347, -0.1432, -0.0105, -0.0316,\n",
+      "         -0.2417, -0.0762],\n",
+      "        [-0.1121,  0.0695,  0.0009,  0.0702,  0.0379, -0.0906, -0.0063, -0.0245,\n",
+      "         -0.2078, -0.1494],\n",
+      "        [-0.1291,  0.1591,  0.0083,  0.1512,  0.0816, -0.1365, -0.0169, -0.0723,\n",
+      "         -0.1708, -0.0077],\n",
+      "        [-0.1400,  0.0687,  0.0496,  0.0928,  0.0417, -0.0191, -0.0006, -0.0902,\n",
+      "         -0.1710, -0.1761],\n",
+      "        [-0.1289,  0.0262,  0.0193,  0.0812,  0.0394, -0.0555, -0.0045, -0.1020,\n",
+      "         -0.1071, -0.0184],\n",
+      "        [-0.0656,  0.1773,  0.0030,  0.0091,  0.0302, -0.1210, -0.0071, -0.0334,\n",
+      "         -0.0228, -0.1690],\n",
+      "        [-0.1687,  0.1891,  0.0626,  0.1293,  0.1479, -0.1799, -0.0174, -0.0826,\n",
+      "         -0.2242, -0.1378],\n",
+      "        [-0.0242,  0.1924,  0.0221,  0.0611,  0.0257, -0.0664, -0.0079, -0.0229,\n",
+      "         -0.2622, -0.2476],\n",
+      "        [-0.0376,  0.2065,  0.0457,  0.1389,  0.1234, -0.0254, -0.0080, -0.0993,\n",
+      "         -0.2751, -0.2978]], grad_fn=<MmBackward0>) tensor([-19.8657, -19.8657, -19.8657, -19.8657, -19.8657, -19.8657, -19.8657,\n",
+      "        -19.8657, -19.8657, -19.8657], grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "z=torch.rand((10,10))\n",
+    "x, lad= m.g(z)\n",
+    "x, lad= d.g(z)\n",
+    "print(x, lad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "7bb50635",
    "metadata": {
     "execution": {
@@ -82,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4177d0f7",
    "metadata": {},
    "outputs": [
@@ -107,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a112bc9b",
    "metadata": {},
    "outputs": [],
@@ -141,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1ab3fa53",
    "metadata": {
     "execution": {
@@ -171,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b66a3749",
    "metadata": {
     "execution": {
@@ -198,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "d85bbd7b",
    "metadata": {
     "execution": {
@@ -252,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "2b5b0325",
    "metadata": {
     "execution": {
@@ -273,25 +421,23 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "Missing logger folder: logs/nf\\lightning_logs\n",
       "\n",
       "  | Name  | Type      | Params\n",
       "------------------------------------\n",
-      "0 | model | simple_nf | 1.3 K \n",
+      "0 | model | simple_nf | 16    \n",
       "1 | loss  | KL_with_S | 0     \n",
       "------------------------------------\n",
-      "1.3 K     Trainable params\n",
+      "16        Trainable params\n",
       "0         Non-trainable params\n",
-      "1.3 K     Total params\n",
-      "0.005     Total estimated model params size (MB)\n",
-      "C:\\ProgramData\\anaconda3\\Lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:441: The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=3` in the `DataLoader` to improve performance.\n",
-      "C:\\ProgramData\\anaconda3\\Lib\\site-packages\\pytorch_lightning\\loops\\fit_loop.py:293: The number of training batches (4) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
+      "16        Total params\n",
+      "0.000     Total estimated model params size (MB)\n",
+      "C:\\ProgramData\\anaconda3\\Lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:441: The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=3` in the `DataLoader` to improve performance.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca38da3f0c12440086880bc80ab5661c",
+       "model_id": "6e58ac411680428aae58c75988af783a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -315,8 +461,7 @@
     "from Data import train_loader\n",
     "\n",
     "set_random_seed(42)\n",
-    "L_layer=L(N_nod)\n",
-    "snf=simple_nf(L_layer,ort=True)\n",
+    "snf=simple_nf(D(N_nod),ort=True)\n",
     "pipeline=Pipeline(model=snf,criterion=KL_osc, optimizer_class=torch.optim.Adam,\n",
     "        optimizer_kwargs={\"lr\": 0.001, \"weight_decay\": 0.01})\n",
     "trainer = pl.Trainer(\n",
@@ -370,6 +515,74 @@
     "\n",
     "trainer.fit(model=pipeline, train_dataloaders=train_loader)\n",
     "torch.save(model.state_dict(), \"L_layer_weights.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f837ce60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from NFandist import get_T\n",
+    "T=torch.tensor(get_T(N_nod)).float()\n",
+    "def G(X,n_p=N_nod):\n",
+    "    G=np.zeros((n_p))\n",
+    "    Y=X.clone()\n",
+    "    Xt=torch.t(X)\n",
+    "    for s in range(n_p):\n",
+    "        G[s]=torch.trace(torch.matmul(Y,Xt))\n",
+    "        Y=torch.matmul(Y,T)\n",
+    "    return G/(N_traj*N_nod)\n",
+    "g_nf=G(trajs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "817d4670",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from NFandist import calc_G\n",
+    "from NFconstants import N_nod, N_traj, NG_points,beta\n",
+    "g_osc=calc_G(N_nod,beta,N_nod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "775f8d89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import sys\n",
+    "#sys.path.append('../')\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from NFconstants import N_nod, N_traj, NG_points,beta\n",
+    "#from Value import G\n",
+    "#import ensemble\n",
+    "#from NFoscillator import basic_oscillator\n",
+    "#from time import time\n",
+    "#from NFandist import calc_G\n",
+    "\n",
+    "\"\"\"\n",
+    "ens_nf=ensemble.ensemble.load(\"nf_ensemble.txt\",basic_oscillator)\n",
+    "g_nf=np.vstack(ensemble.ensemble.Vaverage_and_sigma(ens_nf,G))\n",
+    "g_nf=g_nf.transpose()[0]\n",
+    "\"\"\"\n",
+    "\n",
+    "g=g_ur\n",
+    "print(len(g))\n",
+    "fig=plt.figure()\n",
+    "MCMC_list=np.arange(len(g))/len(g)\n",
+    "NF_list=np.arange(len(g_nf))/len(g_nf)\n",
+    "plt.scatter(MCMC_list,g)\n",
+    "plt.scatter(NF_list,g_nf)\n",
+    "plt.legend([\"MCMC\",\"normalizing flow\"])\n",
+    "plt.grid(True)\n",
+    "plt.show()"
    ]
   },
   {
