--- a/PIMC-py/Notes.ipynb
+++ b/PIMC-py/Notes.ipynb
@@ -212,14 +212,14 @@
     "$$x=f^{-1}(\\bar w,z)$$\n",
     "$$h(w,\\bar w,z)=f(w,f^{-1}(\\bar w,z)) \\qquad h(w,w,z)=z$$\n",
     "$$dh=H(w,\\bar w,z)dz \\qquad H(w,w,z)=I$$\n",
-    "$$L[f]=\\frac{1}{N_{sample}}\\sum_{sample} \\ln\\tilde p_f(x)+S(x)$$\n",
+    "$$L[f]=\\frac{1}{N_{sample}}\\sum_{sample}\\left[ \\ln\\tilde p_f(x)+S(x) \\right]$$\n",
     "$$\\tilde p_f(x)=r(f(w,x))\\left|det\\frac{\\partial f(w,x)}{\\partial x}\\right|$$\n",
     "rewrite in terms of functions of $z$:\n",
     "$$r(f(w,x))=r(f(w,f^{-1}(\\bar w,z)))=r(h(w,\\bar w,z))$$\n",
     "$$dh=\\left. \\frac{\\partial f(w,x)}{\\partial x}\\right|_{x=f^{-1}(\\bar w,z)} \\times \\frac{\\partial f^{-1}(\\bar w,z)}{\\partial z}dz=Hdz$$\n",
     "$$\\left. \\frac{\\partial f(w,x)}{\\partial x}\\right|_{x=f^{-1}(\\bar w,z)}=H \\times \\left(\\frac{\\partial f^{-1}(\\bar w,z)}{\\partial z}\\right)^{-1} $$\n",
     "$$L[f]=\\frac{1}{N_{sample}}\\sum_{sample}\\ln r\\left(h(w,\\bar w,z)\\right)+\\ln\\left|detH(w,\\bar w, z)\\right|-\\ln \\left|\\det\\frac{\\partial f^{-1}(\\bar w,z)}{\\partial z}\\right|+S(f^{-1}(\\bar w,z)) \\equiv L(w,\\bar w)$$\n",
-    "$$L(w,w)=\\frac{1}{N_{sample}}\\sum_{sample} S(f^{-1}(w,z))-\\ln \\left|\\det\\frac{\\partial f^{-1}(w,z)}{\\partial z}\\right|+const$$\n",
+    "$$L(w,w)=\\frac{1}{N_{sample}}\\sum_{sample} \\left[S(f^{-1}(w,z))-\\ln \\left|\\det\\frac{\\partial f^{-1}(w,z)}{\\partial z}\\right|\\right]-\\frac{N}{2}\\left(1+\\ln2\\pi\\right)$$\n",
     "$$w' \\to w - lr \\times \\left[\\nabla_w \\left.L(w,\\bar w)\\right]\\right|_{w=\\bar w} $$"
    ]
   },
@@ -403,54 +403,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$.............................................................................$$\n",
+    "$$T(p) \\qquad K(\\xi)=\\int \\frac{dp}{2\\pi}\\exp\\left(-aT(p)+ip\\xi\\right)\\equiv e^{-a\\tilde T(\\xi)-\\mathcal{N}}$$\n",
+    "$$\\tilde T(0)=0$$\n",
+    "$$T(p)=T(p,m)\\qquad T(\\lambda p,\\lambda m)=\\lambda T(p,m)$$\n",
+    "$$p=q/a \\qquad K(\\xi)=\\int \\frac{dq}{2\\pi a}\\exp\\left(-T(q,ma)+iq\\frac{\\xi}{a}\\right)=\\frac{1}{a}f\\left(\\xi/a,ma\\right)$$\n",
+    "$$P({\\bf x})=\\frac{1}{Z}\\exp\\left(-S[{\\bf x}]-N\\mathcal{N}\\right)$$\n",
+    "$$T(p)=\\frac{p^2}{2}$$\n",
+    "$$-a\\frac{p^2}{2}+i\\xi p=-\\frac{a}{2}\\left(p^2-2\\frac{i\\xi }{a}p+\\frac{i\\xi }{a}+\\frac{\\xi^2}{a^2}\\right)=-\\frac{1}{2}\\left(\\sqrt{a}p+i\\xi\\sqrt{\\frac{1}{a}}\\right)^2-\\frac{\\xi^2}{2a}$$\n",
+    "$$K(\\xi)=\\int\\frac{dp}{2\\pi}\\exp\\left(-\\frac{1}{2}\\left(\\sqrt{a}p+i\\xi\\sqrt{\\frac{1}{a}}\\right)^2-\\frac{\\xi^2}{2a}\\right)$$\n",
+    "$$\\int_{\\mathbb{R}} dz e^{-\\frac{z^2}{2}}=\\sqrt{2\\pi}$$\n",
+    "$$K(\\xi)=\\frac{1}{2\\pi}\\sqrt{\\frac{2\\pi}{a}}e^{-\\frac{\\xi^2}{2a}}=\\sqrt{\\frac{1}{2\\pi a}}e^{-\\frac{\\xi^2}{2a}}=\\exp\\left(-\\frac{\\xi^2}{2a}-\\frac{1}{2}\\ln\\left(2\\pi a\\right)\\right)$$\n",
+    "$$\\tilde T(\\xi)=\\frac{\\xi^2}{2a^2} \\qquad \\mathcal{N}=\\frac12\\ln\\left(2\\pi a\\right)$$\n",
+    "$$P(x)=\\frac{1}{Z}\\exp\\left(-\\frac12(Ax,x)-\\frac{N}{2}\\ln\\left(2\\pi a\\right)\\right)$$\n",
+    "$$Z=\\exp\\left(-\\frac{N}{2}\\ln\\left(2\\pi a\\right)\\right)\\int d^Nx \\exp\\left(-\\frac{1}{2}(Ax,x)\\right)=\\exp\\left(-\\frac{N}{2}\\ln\\left(2\\pi a\\right)\\right)\\frac{(2\\pi)^{N/2}}{\\sqrt{\\det A}}=$$\n",
+    "$$=\\exp\\left(-\\frac{N}{2}\\ln\\left(2\\pi a\\right)+\\frac{N}{2}\\ln 2\\pi -\\frac12\\ln\\det A\\right)=\\exp\\left(-\\frac{1}{2}\\ln\\left(a^N\\det A\\right)\\right)=$$\n",
+    "$$=\\exp\\left(-\\frac{1}{2}\\ln\\left(\\det (aA)\\right)\\right)=\\frac{1}{\\sqrt{\\det(aA)}}$$\n",
+    "$$Z=\\prod_{k=0}^{N}\\frac{1}{\\sqrt{a^2+4\\sin{\\frac{\\pi k}{N}}}}\\to\\frac{1}{2\\sinh (\\beta/2)} \\qquad \\beta=Na$$\n",
     "\n",
     "\n",
-    "$$\\langle O(x(t_1),...,x(t_n))\\rangle=\\int D[x(t)]\\frac{\\exp\\left(-S[x(t)]\\right)}{Z} O(x(t_1),...,x(t_n))\\approx$$\n",
-    "$$\\approx \\int d^Nx \\frac{\\exp\\left(-S(x)\\right)}{Z} O(x) \\approx \\frac{1}{M}\\sum_{k=1}^M O(X_k)$$\n",
-    "\\\\\n",
-    "\\\\\n",
-    "\\\\\n",
+    "$$T(p)=|p|$$\n",
+    "$$K(\\xi)=\\int_{\\mathbb{R}}\\frac{dp}{2\\pi}\\exp\\left(-a|p|+ip\\xi \\right)=\\int_{-\\infty}^{0}\\frac{dp}{2\\pi}\\exp\\left(ap+ip\\xi\\right)+\\int_0^{+\\infty}\\frac{dp}{2\\pi}\\exp\\left(-ap+ip\\xi\\right)=$$\n",
+    "$$=\\int_0^{\\infty}\\frac{dp}{2\\pi}\\left\\{\\exp\\left(-ap-ip\\xi\\right)+\\exp\\left(-ap+ip\\xi\\right)\\right\\}=\\int_0^{+\\infty}\\frac{dp}{\\pi}Re\\left\\{\\exp\\left(-(a+i\\xi)p\\right) \\right\\}=\\frac{1}{\\pi}Re\\frac{1}{a+i\\xi}=\\frac{1}{\\pi a}\\frac{1}{1+\\left(\\frac{\\xi}{a}\\right)^2}$$\n",
+    "$$\\tilde T(\\xi)=\\frac{1}{a}\\ln\\left(1+\\frac{\\xi^2}{a^2}\\right) \\qquad \\mathcal{N}=\\ln\\left(\\pi a\\right)$$\n",
+    "$$..........................................$$\n",
+    "$$T(p)=\\sqrt{p^2\\left(\\frac{\\Pi}{E}\\right)^2+\\left(\\frac{m}{E}\\right)^2}-a\\frac{m}{E}$$\n",
+    "$$\\int \\frac{dp}{2\\pi} \\exp\\left(-a\\sqrt{p^2+m^2}+ip\\xi\\right)=\\frac{ma}{\\pi a\\sqrt{1+\\left(\\frac{\\xi}{a}\\right)^2}}K_1\\left(ma\\sqrt{1+\\left(\\frac{\\xi}{a}\\right)^2}\\right)$$\n",
+    "$$\\frac{\\Pi}{E} \\equiv s_1 = \\sigma^{\\gamma-\\alpha} \\qquad \\frac{m}{E}\\equiv s_2=\\sigma^{\\gamma-1}$$ \n",
     "\n",
-    "$$X_k\\sim P(x) \\qquad P(x)= \\frac{\\exp\\left(-S(x)\\right)}{Z}$$\n",
+    "$$T(p)=\\sqrt{p^2 s_1^2+s_2^2}-as_2$$\n",
     "\n",
-    "\\\\\n",
-    "\\\\\n",
-    "$$z\\sim \\mathbb{N}^N(0,1) \\qquad x=g(z) \\qquad x \\sim P(x) $$\n",
-    "$$g=A_n\\circ...\\circ A_1$$\n",
-    "$$z=u+v$$\n",
-    "$$A(u)=u \\qquad [A(v)]_k=e^{-\\theta_{1k}(u)}\\left(v_k-\\theta_{2k}(u)\\right)$$\n",
-    "$$\\theta: \\mathbb{R}^{N/2} \\to \\mathbb{R}^N$$\n",
-    "\\\\\n",
-    "\\\\\n",
+    "$$K(\\xi)=\\int\\frac{dq}{2\\pi s_1 a}\\exp\\left(-\\sqrt{q^2+s_2^2a^2}+iq\\frac{\\xi}{s_1a}+as_2\\right)=e^{as_2}\\frac{s_2}{\\pi s_1\\sqrt{1+\\left(\\frac{\\xi}{a}\\right)^2s_1^{-2}}}K_1\\left(s_2a\\sqrt{1+\\left(\\frac{\\xi}{a}\\right)^2s_1^{-2}}\\right)$$\n",
     "\n",
-    "$$P_g(x)=r(z)\\left|det\\frac{\\partial g}{\\partial z}\\right|^{-1} \\qquad z=g^{-1}(x) \\qquad r(z)=\\frac{1}{(2\\pi)^{N/2}}\\exp\\left(-\\frac12 z^2\\right)$$\n",
-    "$$L[w]=D_{KL}(P_g|P)-\\ln Z=\\int dx P_g(x)\\left(\\ln P_g(x)+S(x)\\right)=\\frac{1}{M}\\sum_{i=1}^{M} \\left(S(x_i)+\\ln P_g(x_i)\\right)$$\n",
-    "$$L[w]=\\frac{1}{M}\\sum_{i=1}^{M} \\left(S(g(z_i))-\\ln \\left|\\det\\frac{\\partial g}{\\partial z}\\right|\\right)+const$$\n",
+    "$$K_1(z)=e^{-z}Q_1(z)$$\n",
     "\n",
+    "$$Q_1(z)=\\frac{e^{z}}{z}+\\ln z O(z)+O(z)$$\n",
     "\n",
+    "$$Q_1(z)=\\sqrt{\\frac{\\pi}{2z}}\\left(1+O(1/z)\\right)$$\n",
     "\n",
+    "$$y=\\sqrt{1+\\left(\\frac{\\xi}{a}\\right)^2s_1^{-2}}$$\n",
     "\n",
-    "$$G(s)=\\frac{1}{N}\\sum_{i=1}^N\\langle x_{i}x_{i+s}\\rangle$$\n",
+    "$$K_1(\\xi)=\\frac{s_2}{\\pi s_1y}e^{-s_2a(y-1)}Q_1(s_2ay)=$$\n",
     "\n",
+    "$$=\\exp\\left(-s_2a(y-1)+\\ln\\left(\\frac{s_2}{\\pi s_1}\\right)-\\ln y+\\ln\\left(Q_1(s_2 a y)\\right)\\right)$$\n",
     "\n",
-    "$$H=\\frac{p^2}{2}+V(x)$$\n",
-    "$$S(x)=\\sum_{k=1}^{N} \\frac{(x_{k+1}-x_k)^2}{2a}+aV(x_k)$$\n",
-    "$$V(x)=\\frac{x^2}{2} \\qquad S(x)=\\frac{1}{2a}\\sum_{k=1}^N \\left( (2+a^2)x_{k}^2-2x_kx_{k+1} \\right)=\\frac{1}{2}(Ax,x) $$\n",
-    "$$L(w)=\\frac12<(Awz,wz)>-\\ln\\det w=\\frac12tr\\left(w^TAw\\right)-\\ln|\\det w|$$\n",
-    "$$DL[w]=O(N^3)$$\n",
-    "$$g(z)=wz \\qquad \\nabla_w L=Aw-(w^T)^{-1} \\qquad w=On$$\n",
+    "$$\\tilde T(\\xi)=s_2(y-1)-\\frac{1}{a}\\ln\\left(\\frac{Q_1\\left(s_2ay\\right)}{yQ_1\\left(s_2a\\right)}\\right)$$\n",
     "\n",
-    "\\\\\n",
+    "$$\\mathcal{N}=\\ln\\left(\\frac{\\pi s_1}{s_2 Q_1\\left(s_2 a\\right)}\\right)$$\n",
     "\n",
+    "$$\\sigma<<1 \\qquad s_1=\\sigma^{-1/2} \\qquad s_2=\\sigma^{-1}>>1$$\n",
     "\n",
-    "$$H=\\sqrt{p^2+m^2}+\\frac{m\\omega^2x^2}{2}$$\n",
-    "$$S(x)=\\sum_{i=1}^N \\left\\{ \\ln \\left( \\frac{y_i}{K_1(ma y_i)} \\right) + a\\frac{m\\omega^2 x_i^2}{2} \\right\\}, \\qquad  y_i=\\sqrt{1+\\frac{(x_{i+1}-x_i)^2}{a^2}}$$\n",
-    "$$H=|p|+\\frac{x^2}{2}$$\n",
-    "$$S(x)=\\sum_{i=1}^N \\left\\{ \\ln \\left( 1+\\frac{(x_{i+1}-x_i)^2}{a^2} \\right) + a\\frac{x_i^2}{2} \\right\\}$$\n",
+    "$$y=\\sqrt{1+\\frac{\\xi^2}{a^2}\\sigma}=1+\\frac{\\xi^2}{2a^2}\\sigma+o(\\sigma)$$\n",
     "\n",
-    "\\\\\n",
-    "\n"
+    "$$\\tilde T(\\xi)=\\sigma^{-1}\\left(\\frac{\\xi^2}{2a^2}\\sigma+o\\left(\\sigma\\right)\\right)+\\frac{1}{2a}\\ln\\left(y\\right)=\\frac{\\xi^2}{2a^2}+\\frac{\\xi^2}{4a^3}\\sigma + o(\\sigma)$$\n",
+    "\n",
+    "$$\\sigma>>1 \\qquad s_1=1 \\qquad s_2=\\sigma^{-2/3}<<1$$\n",
+    "\n",
+    "$$\\tilde T(\\xi)=s_2(y-1)-\\frac{1}{a}\\ln\\left(\\frac{e^{s_2a(y-1)}s_2a}{s_2ay^2}\\right)=\\frac{1}{a}\\ln y^2=\\frac{1}{a}\\ln\\left(1+\\frac{\\xi^2}{a^2}\\right)$$"
    ]
   },
   {
