--- a/PIMC-py/Notes/Notes.ipynb
+++ b/PIMC-py/Notes/Notes.ipynb
@@ -52,7 +52,7 @@
     "where\n",
     "$$\\alpha=qL=\\frac{q\\hbar}{g\\sqrt{m}}>0$$\n",
     "is the dimensionless parametr.\n",
-    "$$f(x)=-e^{-\\alpha x}+\\left(1-\\frac{\\alpha}{2}\\right)x \\qquad \\varepsilon_0=-\\frac{(2-\\alpha)^2}{8}$$\n",
+    "$$f(x)=-e^{-\\alpha x}+\\left(1-\\frac{\\alpha}{2}\\right) \\qquad \\varepsilon_0=-\\frac{(2-\\alpha)^2}{8}$$\n",
     "$$\\psi=N\\exp\\left[-\\frac{1}{\\alpha}e^{-\\alpha x}-\\frac{2-\\alpha}{2}x\\right]$$\n",
     "Note, that bound states are exist only if $0<\\alpha<2$\n",
     "\n",
